# gnome-shell

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
browser-plugin/: Makefile.am  Makefile.in  libgnome-shell-browser-plugin.la
browser-plugin/npapi-plugin/: Makefile.am  Makefile.in  npapi-plugin.c
browser-plugin/ppapi-plugin/: Makefile.am  Makefile.am~  Makefile.in  ppapi-plugin.c  ppapi-plugin.c~
data/: Makefile.in
debian/: autoreconf.after  autoreconf.before  control  control.in  source_gnome-shell.py
debian/patches/: git-alternate-key-focus.patch  git_port_c++.patch  git_remove_direct_jsapi_access.patch  git_remove_e4x.patch  git_remove_gc_notifications.patch  git_remove_js-version_set.patch  git_remove_lg_memory_tab.patch  git_shell_global_fix_scale_factor.patch  git_sttexturecache_dont_crash.patch  revert-disable-periodic-gc.patch  revert-notification-settings-link.patch  revert-shelldbus-export-timestamps.patch  revert_new_bluetooth.patch  revert_new_brightness_widget.patch  series  ubuntu-lightdm-user-switching.patch  ubuntu_lock_on_suspend.patch
debian/tmp/usr/lib/gnome-shell/: Shell-0.1.typelib  ShellMenu-0.1.typelib  St-1.0.typelib  libgnome-shell-js.la  (+5 more)
docs/: Makefile.in
docs/reference/: Makefile.in
docs/reference/shell/: Makefile.in  shell-sections.txt
docs/reference/st/: Makefile.in
js/: Makefile.am  Makefile.in
js/ui/: panel.js  shellDBus.js
js/ui/components/: networkAgent.js
man/: Makefile.in
src/: Makefile.in  shell-global.c
src/gvc/: Makefile.in
src/st/: st-texture-cache.c
tests/: Makefile.in
(+71 files in other folders)
